# blinkist-scraper

./: .gitignore  README.md  cjpalhdlnbpafiamejdnhcphjbkeiagm.crx  cjpalhdlnbpafiamejdnhcphjbkeiagm.pem  generator.py  main.py  pyproject.toml  pyproject_parse.py  requirements.txt  scraper.py  utils.py
blinkistscraper/: __main__.py  generator.py  logger.py  scraper.py  utils.py
templates/: book.html  chapter.html  epub.css
