[tool.poetry]
name = "blinkist-scraper"
version = "1.0.0"
description = "Scrape blinkist.com and generate pretty output"
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
chromedriver-autoinstaller = "^0.2.2"
colorama = "^0.4.3"
EbookLib = "^0.17.1"
requests = "^2.24.0"
selenium = "^3.141.0"
selenium-wire = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
